debugging mobile whitespace issue

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,16 @@
   padding: 0px;
 }
 
-body {
+body,
+html {
   height: 100%;
   width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
   overflow: auto;
-  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -21,9 +26,6 @@ code {
 }
 html {
   /* overflow: hidden; */
-  height: 100%;
-  width: 100%;
-  /* overflow-x: hidden; */
 }
 
 :root {
